Intento de linkeado con página de compra

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             nivel que tenemos para ti. ¡Te esperamos!</p>
                         <button type="button" class="btn btn-link"><a href="#form" class="text-light">Quiero ser un
                                 orador</a></button>
-                        <button class="btn btn-success"><a class="text-light text-decoration-none" href="#">Comprar
+                        <button class="btn btn-success"><a class="text-light text-decoration-none" href="compraticket.html">Comprar
                                 tickets</a></button>
                     </div>
                 </div>
