--- a/compraticket.html
+++ b/compraticket.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos\estilo2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Document</title>
@@ -90,6 +91,17 @@
                             <option value="junior">Junior</option>
                         </select>
                     </div>
+                </div>
+                <div class="totalAPagar text-center p-3">
+                    Total a Pagar: $
+                </div>
+                <div class="row my-2">
+                <div class="col d-grid">
+                    <input type="reset" value="Borrar" class="btn btn-success">
+                </div>
+                <div class="col d-grid">
+                    <input type="button" value="Resumen" class="btn btn-success">
+                </div>
                 </div>
             </form>
         </div>
