Toques finales al HTML y empiezo con el JS

--- a/compraticket.html
+++ b/compraticket.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <script src="js\js.js"></script>
     <!--Navbar-->
     <div class="container-fluid">
         <nav class="row navbar navbar-expand-sm bg-dark">
@@ -89,6 +90,7 @@
                             <option value="estudiante">Estudiante</option>
                             <option value="trainee">Trainee</option>
                             <option value="junior">Junior</option>
+                            <option value="ninguno">Ninguno</option>
                         </select>
                     </div>
                 </div>
