--- a/compraticket.html
+++ b/compraticket.html
@@ -102,7 +102,7 @@
                     <input type="reset" value="Borrar" class="btn btn-success">
                 </div>
                 <div class="col d-grid">
-                    <input type="button" value="Resumen" class="btn btn-success">
+                    <input type="button" id="resumen" value="Resumen" class="btn btn-success">
                 </div>
                 </div>
             </form>
