Intento de conectar la caja azúl e intento de multiplicar los descuentos

--- a/compraticket.html
+++ b/compraticket.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script src="js\js.js"></script>
+
     <!--Navbar-->
     <div class="container-fluid">
         <nav class="row navbar navbar-expand-sm bg-dark">
@@ -94,7 +94,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="totalAPagar text-center p-3">
+                <div id="totalAPagar" class="totalAPagar p-3">
                     Total a Pagar: $
                 </div>
                 <div class="row my-2">
@@ -128,6 +128,6 @@
                     </ul>
                 </div>
     </div>
+    <script src="js\js.js"></script>
 </body>
-
 </html>
